# packaging_extrapolation

./: LICENSE  README.md  pyproject.toml  setup.py  数据表.xlsx
methods_pkg/: Extrapolation.py  __init__.py
packaging_extrapolation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/packaging_extrapolation/: Extrapolation.py  UtilLog.py  UtilTools.py  examples.py
src/packaging_extrapolation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/packaging_extrapolation/data/: ccsdt.CSV  hf.CSV  log_result.csv
src/packaging_extrapolation/examples/: CBS_Energy.csv  examples.py  examples_energy.py  examples_log.py  examples_log_hf.py  examples_model.py  model_examples.py  train.py
src/packaging_extrapolation/model_detail/CCSD(T)_model/: trained_model_1.pkl
src/packaging_extrapolation/model_detail/HF_model/: trained_model_1.pkl
