[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



[project]
name = "packaging_extrapolation"
authors = [
    {name = "ZHAOKAI XI", email = "xizaokaiz@foxmail.com"},
]
description = "Extrapolation methods for complete basis sets"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
version = "1.0.1"
dependencies = [
    "numpy","pandas","scipy","scikit-learn","matplotlib"
]
keywords = ["basis set","extrapolation","quantum chemistry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/xizaokaiz/packaging_extrapolation.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["packaging_extrapolation"]
namespaces = true


